--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 .cards{
     
@@ -58,4 +60,11 @@ body{
     margin: 10px;
     color: #46e;
     font-size: 16px;
+}
+
+#product-image {
+    width: 300px;
+    height: 300px;
+    background-size: cover;
+    background-position: center;
 }
