--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,53 @@
-body{
+body {
     background-color: #333;
     color: #fff;
     font-family: sans-serif;
+    margin: 0;
+    padding: 0;
 }
+
+.navbar {
+    display: flex;
+    flex-direction: row; 
+    align-items: center;
+    justify-content: center; 
+    padding: 10px;
+    width: 100%; 
+    box-sizing: border-box; 
+    max-width: 1200px; 
+    margin: 0 auto; 
+}
+
+.menu {
+    display: flex;
+    flex-direction: row; 
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #46e;
+    padding: 10px;
+    margin-right: 10px; 
+}
+
+.finder {
+    border: 1px solid #46e;
+    border-radius: 3px;
+    padding: 5px;
+    margin: 10px;
+    width: 300px;
+    box-sizing: border-box;
+}
+
+.filtrar, .borrar {
+    border: 1px solid #46e;
+    border-radius: 3px;
+    padding: 5px;
+    margin: 10px;
+    width: 100px;
+    box-sizing: border-box;
+    background-color: #333;
+}
+
+
 .container{
     display: flex;
     align-items: center;
@@ -31,16 +76,6 @@ body{
     background-position: center;
     text-align: center;
     justify-content: center;
-}
-
-#img1{
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7sXyh0EpGSjbMOAsBIFddHr2vvK_u1s4LTw&s);
-}
-#img2{
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwqY0-VQho8IyB5F9l3ck34MyVKUjubs-PXg&s);
-}
-#img3{
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvoy8jfooyfQg5tj6K-4UIZWHIAuKQk6klKw&s);
 }
 
 .card-title{
